# pico-projects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/blink/: CMakeLists.txt  blink.cpp
src/hid_host/: CMakeLists.txt
src/nokia-lcd/: CMakeLists.txt  README.md  bird.h  camera.h  eye.h  nokia_lcd.cpp
src/nokia-lcd/fonts/: nokia-fonts.c  nokia-fonts.h
src/nokia-lcd/scripts/: convert-image.py
src/pwm_led/: CMakeLists.txt  pwm_led.cpp
src/retro-usb-interface/: CMakeLists.txt  README.md
src/retro-usb-interface/hw/retro-usb-interface/: retro-usb-interface.kicad_pro  retro-usb-interface.kicad_sch
src/retro-usb-interface/src/: fifo.h  keyboard.cpp  keyboard.h  main.cpp  mouse.cpp  mouse.h  serial.cpp  serial.h  uhid.cpp  umass.cpp
src/retro-usb-interface/src/config/: tusb_config.h
src/uart_test/: CMakeLists.txt  uart_test.cpp
